WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282191
[Site Isolation] editing/input/reveal-selection-having-stored-scroll-position.html crashes
https://bugs.webkit.org/show_bug.cgi?id=282191
Summary
[Site Isolation] editing/input/reveal-selection-having-stored-scroll-position...
Charlie Wolfe
Reported
2024-10-28 11:46:59 PDT
This test caused an assertion to fail that verifies the frame being navigated is a root frame. `ScheduledHistoryNavigation` should pass the rootmost frame to `Page::goToItem`, rather than the main frame, which may be out-of-process and unable to load history items.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-28 11:47:11 PDT
<
rdar://problem/138781071
>
Charlie Wolfe
Comment 2
2024-10-28 11:49:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35808
EWS
Comment 3
2024-10-29 10:27:33 PDT
Committed
285844@main
(d3d21638647f): <
https://commits.webkit.org/285844@main
> Reviewed commits have been landed. Closing PR #35808 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug