[Site Isolation] editing/input/reveal-selection-having-stored-scroll-position.html crashes https://bugs.webkit.org/show_bug.cgi?id=282191 rdar://138781071

Reviewed by Alex Christensen.

This test caused an assertion to fail that verifies the frame being navigated is a root frame.
`ScheduledHistoryNavigation` should pass the rootmost frame to `Page::goToItem`, rather than the main
frame, which may be out-of-process and unable to load history items. Also change the frame parameter to
LocalFrame to prevent this in the future.

No change in behavior when site isolation is disabled.

* Source/WebCore/loader/NavigationScheduler.cpp:
(WebCore::NavigationScheduler::scheduleHistoryNavigation):
* Source/WebCore/page/LocalFrame.h:
* Source/WebCore/page/Page.cpp:
(WebCore::Page::goToItem):
* Source/WebCore/page/Page.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::goToBackForwardItem):

Canonical link: https://commits.webkit.org/285844@main